--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "start": "echo \"Running Node App\" && node imports.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "emmanuelkiranr",
