added readline-sync from user input

--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "license": "MIT",
   "devDependencies": {
     "axios": "^1.1.3"
+  },
+  "dependencies": {
+    "readline-sync": "^1.4.10"
   }
 }
